--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,87 +9,30 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">FutureShop</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Personal
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" data-bs-toggle="offcanvas" href="#login" role="button" aria-controls="login">Login</a></li>
-                        <li><a class="dropdown-item" data-bs-toggle="offcanvas" href="#register" role="button" aria-controls="register">Register</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
-
+  <div th:replace="fragments/navbar::navbar"></div>
+      
+      <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="login" aria-labelledby="loginLabel">
+        <div class="offcanvas-header">
+          <h5 id="offcanvasRightLabel">Login</h5>
+          <button type="button" class="btn-close text-reset btn-danger" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-    </div>
-</nav>
+        <div class="offcanvas-body">
+            <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <button type="submit" class="btn btn-success">Login</button>
+              </form>
+        </div>
+      </div>
 
-<div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="login" aria-labelledby="loginLabel">
-    <div class="offcanvas-header">
-        <h5 id="offcanvasRightLabel">Login</h5>
-        <button type="button" class="btn-close text-reset btn-danger" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body">
-        <form>
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <button type="submit" class="btn btn-success">Login</button>
-        </form>
-    </div>
-</div>
-
-<div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="register" aria-labelledby="registerLabel">
-    <div class="offcanvas-header">
-        <h5 >Register</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body">
-        <form>
-            <div class="mb-3">
-                <label class="form-label">Username</label>
-                <input type="text" class="form-control" id="usernameInput">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" aria-describedby="emailHelp">
-                <div class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Register</button>
-        </form>
-    </div>
-</div>
-
-
+      
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
