--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/styles.css">
+    <link rel="stylesheet" href="">
     <title>Title</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li sec:authorize="isAuthenticated()" class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -30,16 +30,19 @@
                             Personal
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/users/login" role="button">Login</a></li>
-                            <li><a class="dropdown-item" href="/users/register" role="button">Register</a></li>
+                            <li sec:authorize="!isAuthenticated()"><a class="dropdown-item" th:href="@{/users/login}" role="button">Login</a></li>
+                            <li sec:authorize="!isAuthenticated()"><a class="dropdown-item" th:href="@{/users/register}" role="button">Register</a></li>
+                            <li sec:authorize="isAuthenticated()"><a class="dropdown-item" href="" role="button">Authenticated user</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li sec:authorize="isAuthenticated()"><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <form id="logoutForm" th:action="@{/logout}" method="POST">
+                            <button class="btn btn-dark" type="submit">Logout</button>
+                        </form>
                     </li>
                 </ul>
 
@@ -47,6 +50,12 @@
         </div>
     </nav>
 </div>
+
+<script>
+    function myFunction() {
+        document.getElementById("logoutForm").submit();
+    }
+</script>
 
 </body>
 </html>
