--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="">
     <title>Register</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
             <div class="col-md-4 offset-md-4">
                 <div class="shadow p-3 mb-5 rounded login-form bg-light mt-4 p-4">
                     <form action="" method="" class="row g-3">
-                        <h4>Welcome!!!</h4>
+                        <h1>Register</h1>
                         <div class="col-12">
                             <label>Email</label>
                             <input type="email" name="email" class="form-control" placeholder="email@address.com">
@@ -34,6 +34,10 @@
                             <input type="password" name="password" class="form-control" placeholder="Password">
                         </div>
                         <div class="col-12">
+                            <label>Confirm Password</label>
+                            <input type="password" name="confirmPassword" class="form-control" placeholder="ConfirmPassword">
+                        </div>
+                        <div class="col-12">
                             <button type="submit" class="btn btn-success float-end">Register</button>
                         </div>
                     </form>
@@ -46,7 +50,7 @@
         </div>
     </div>
 
-<div th:replace="fragments/footer::footer"></div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
