--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-md-4 offset-md-4">
                 <div class="shadow p-3 mb-5 rounded login-form bg-light mt-4 p-4">
-                    <form action="" method="" class="row g-3">
+                    <form th:action="@{/users/register}" method="POST" class="row g-3">
                         <h1>Register</h1>
                         <div class="col-12">
                             <label>Email</label>
@@ -43,7 +43,7 @@
                     </form>
                     <hr class="mt-4">
                     <div class="col-12">
-                        <p class="text-center mb-0">Already have an account? <a href="login.html">SignIn</a></p>
+                        <p class="text-center mb-0">Already have an account? <a href="/users/login">SignIn</a></p>
                     </div>
                 </div>
             </div>
