--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
+<head th:fragment="head">
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="">
-    <title>Title</title>
+    <title>Future Shop</title>
 </head>
-<body>
+<body class="container-fluid full">
 <div th:fragment="navbar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">FutureShop</a>
+            <a class="navbar-brand" href="/">FUTURESHOP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -19,20 +18,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
                     </li>
                     <li sec:authorize="isAuthenticated()" class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">LINK</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/users/login}" role="button">LOGIN</a></li>
+                    <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/users/register}" role="button">REGISTER</a></li>
+                    <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" href="" role="button">AUTHENTICATED USER</a></li>
+                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Personal
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdown">
-                            <li sec:authorize="!isAuthenticated()"><a class="dropdown-item" th:href="@{/users/login}" role="button">Login</a></li>
-                            <li sec:authorize="!isAuthenticated()"><a class="dropdown-item" th:href="@{/users/register}" role="button">Register</a></li>
-                            <li sec:authorize="isAuthenticated()"><a class="dropdown-item" href="" role="button">Authenticated user</a></li>
+                            <li sec:authorize="isAuthenticated()"><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li sec:authorize="isAuthenticated()"><a class="dropdown-item" href="#">Something else here</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
