--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,73 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="">
-    <title>Login</title>
+<head th:replace="fragments/navbar::head">
+
 </head>
 
 <body>
 
 <div th:replace="fragments/navbar::navbar"></div>
 
-      <div class="container">
-        <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <div class="shadow p-3 mb-5 login-form bg-dark mt-4 p-4 bg-image"
-                    style="border-radius: 20px;">
-                    <form th:action="@{/users/login}" method="POST" class="row g-3" >
-                        <h1>Login</h1>
-                        <div class="col-12">
-                            <label>Username</label>
-                            <input type="text" name="username" class="form-control" placeholder="Username">
-                        </div>
-                        <div class="col-12">
-                            <label>Password</label>
-                            <input type="password" name="password" class="form-control" placeholder="Password">
-                        </div>
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-warning float-end">Login</button>
-                        </div>
-                    </form>
-                    <hr class="mt-4">
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="shadow p-3 mb-5 login-form bg-dark mt-4 p-4 bg-image"
+                 style="border-radius: 20px;">
+                <form th:action="@{/users/login}" method="POST" class="row g-3" >
+                    <h1>Login</h1>
                     <div class="col-12">
-                        <p class="text-center mb-0">Haven't got an account yet? <a href="" class="btn-warning" style="padding: 0 10px 5px ">Signup</a></p>
+                        <label>Username</label>
+                        <input type="text" name="username"
+                               th:value="${username}"
+                               class="form-control" placeholder="Username">
                     </div>
+                    <div class="col-12">
+                        <label>Password</label>
+                        <input type="password" name="password" class="form-control" placeholder="Password">
+                    </div>
+                    <div th:if="${bad_credentials}" class="alert alert-danger">
+                        Incorrect username or password
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-warning float-end">Login</button>
+                    </div>
+                </form>
+                <hr class="mt-4">
+                <div class="col-12">
+                    <p class="text-center mb-0">Haven't got an account yet? <a href="" class="btn-warning" style="padding: 0 10px 5px ">Signup</a></p>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-<style>
-    textarea:focus,
-    input[type="text"]:focus,
-    input[type="password"]:focus,
-    input[type="datetime"]:focus,
-    input[type="datetime-local"]:focus,
-    input[type="date"]:focus,
-    input[type="month"]:focus,
-    input[type="time"]:focus,
-    input[type="week"]:focus,
-    input[type="number"]:focus,
-    input[type="email"]:focus,
-    input[type="url"]:focus,
-    input[type="search"]:focus,
-    input[type="tel"]:focus,
-    input[type="color"]:focus,
-    .uneditable-input:focus {
-        border-color: orange;
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgb(255, 255, 255);
-        outline: 0 none;
-    }
+<style th:replace="fragments/style::style">
 
-    .login-form {
-        color: orange;
-    }
-    .btn-warning {
-        background-color: orange;
-    }
 </style>
 
 
