--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,69 +14,74 @@
 
 <div th:replace="fragments/navbar::navbar"></div>
 
-      <div class="container">
-        <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <div class="shadow p-3 mb-5 rounded login-form bg-light mt-4 p-4">
-                    <form th:action="@{/users/register}" method="POST" th:object="${registerBindingModel}" class="row g-3">
-                        <h1>Register</h1>
-                        <div class="col-12">
-                            <label>Email</label>
-                            <input type="email" name="email" th:value="*{email}"
-                                   th:errorclass="is-invalid"
-                                   class="form-control" placeholder="email@address.com">
-                        </div>
-                        <div class="invalid-feedback">
-                            Email must be valid
-                        </div>
-                        <div class="col-12">
-                            <label>Username</label>
-                            <input type="text" name="username"
-                                   th:value="*{username}"
-                                   th:errorclass="is-invalid"
-                                   class="form-control" placeholder="Username">
-                            <div class="invalid-feedback">
-                                Username must be longer than 3 characters
-                            </div>
-                            <div id="usernameUniqueError" th:if="${userExistsError}" class="text-danger">
-                                Username already exists
-                            </div>
-                        </div>
-                        
-                        <div class="col-12">
-                            <label>Password</label>
-                            <input type="password"
-                                   name="password"
-                                   th:errorclass="is-invalid"
-                                   class="form-control" placeholder="Password">
-                            <div class="invalid-feedback">
-                                Password must be longer than 5 characters
-                            </div>
-                        </div>
-
-                        <div class="col-12">
-                            <label>Confirm Password</label>
-                            <input type="password"
-                                   th:errorclass="is-invalid"
-                                   name="confirmPassword" class="form-control" placeholder="ConfirmPassword">
-                            <div class="invalid-feedback">
-                                Passwords must match
-                            </div>
-                        </div>
-
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-success float-end">Register</button>
-                        </div>
-                    </form>
-                    <hr class="mt-4">
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="shadow p-3 mb-5 login-form bg-dark mt-4 p-4"
+                 style="border-radius: 20px;">
+                <form th:action="@{/users/register}" method="POST" th:object="${registerBindingModel}" class="row g-3">
+                    <h1>Register</h1>
                     <div class="col-12">
-                        <p class="text-center mb-0">Already have an account? <a href="/users/login">SignIn</a></p>
+                        <label>Email</label>
+                        <input type="email" name="email" th:value="*{email}"
+                               th:errorclass="is-invalid"
+                               class="form-control" placeholder="email@address.com">
                     </div>
+                    <div class="invalid-feedback">
+                        Email must be valid
+                    </div>
+                    <div class="col-12">
+                        <label>Username</label>
+                        <input type="text" name="username"
+                               th:value="*{username}"
+                               th:errorclass="is-invalid"
+                               class="form-control" placeholder="Username">
+                        <div class="invalid-feedback">
+                            Username must be longer than 3 characters
+                        </div>
+                        <div id="usernameUniqueError" th:if="${userExistsError}" class="text-danger">
+                            Username already exists
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <label>Password</label>
+                        <input type="password"
+                               name="password"
+                               th:errorclass="is-invalid"
+                               class="form-control" placeholder="Password">
+                        <div class="invalid-feedback">
+                            Password must be longer than 5 characters
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <label>Confirm Password</label>
+                        <input type="password"
+                               th:errorclass="is-invalid"
+                               name="confirmPassword" class="form-control" placeholder="ConfirmPassword">
+                        <div class="invalid-feedback">
+                            Passwords must match
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-warning float-end">Register</button>
+                    </div>
+                </form>
+                <hr class="mt-4">
+                <div class="col-12">
+                    <p class="text-center mb-0">Already have an account? <a href="/users/login">SignIn</a></p>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
+
+<style th:replace="fragments/style::style">
+
+</style>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
