--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
                 </form>
                 <hr class="mt-4">
                 <div class="col-12">
-                    <p class="text-center mb-0">Haven't got an account yet? <a href="" class="btn-warning" style="padding: 0 10px 5px ">Signup</a></p>
+                    <p class="text-center mb-0">Haven't got an account yet? <a th:href="@{/users/register}" class="btn-warning" style="padding: 0 10px 5px">Signup</a></p>
                 </div>
             </div>
         </div>
