--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -71,7 +71,7 @@
                 </form>
                 <hr class="mt-4">
                 <div class="col-12">
-                    <p class="text-center mb-0">Already have an account? <a href="/users/login">SignIn</a></p>
+                    <p class="text-center mb-0">Already have an account? <a th:href="@{/users/login}" class="btn-warning" style="padding: 0 10px 5px">SignIn</a></p>
                 </div>
             </div>
         </div>
