--- a/src/main/resources/templates/add-restaurant.html
+++ b/src/main/resources/templates/add-restaurant.html
@@ -16,7 +16,7 @@
                     <h1>Add Restaurant</h1>
                     <div class="col-12">
                         <label>Name</label>
-                        <input type="text" name="name"
+                        <input type="text"
                                th:field="*{name}"
                                th:errorclass="is-invalid"
                                class="form-control" placeholder="Name">
@@ -26,17 +26,36 @@
                     </div>
                     <div class="col-12">
                         <label>Address</label>
-                        <input type="text" name="address"
+                        <input type="text"
                                th:field="*{address}"
                                th:errorclass="is-invalid"
                                class="form-control" placeholder="Address">
+                        <div class="invalid-feedback">
+                            You must enter a valid address
+                        </div>
                     </div>
+
+                    <div class="col-12">
+                        <label>Image Url</label>
+                        <input type="text"
+                               th:field="*{imageUrl}"
+                               th:errorclass="is-invalid"
+                               class="form-control" placeholder="Image Url">
+                        <div class="invalid-feedback">
+                            You must enter an image url
+                        </div>
+                    </div>
+
                     <div class="col">
                         <label>Dishes</label>
                         <select th:field="*{dishes}" th:errorclass="is-invalid" class="form-select" size="3" multiple>
                             <option th:each="d : ${dishes}" th:value="${d}" th:text="${d}"></option>
                         </select>
+                        <div class="invalid-feedback">
+                            You must select a dish
+                        </div>
                     </div>
+
                     <div class="col-12">
                         <button type="submit" class="btn btn-warning float-end">Add Restaurant</button>
                     </div>
@@ -49,6 +68,8 @@
 <style th:replace="fragments/style::style">
 
 </style>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
