--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,27 +6,35 @@
 <body>
 
   <div th:replace="fragments/navbar::navbar"></div>
-      
-      <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="login" aria-labelledby="loginLabel">
-        <div class="offcanvas-header">
-          <h5 id="offcanvasRightLabel">Login</h5>
-          <button type="button" class="btn-close text-reset btn-danger" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <form>
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <button type="submit" class="btn btn-success">Login</button>
-              </form>
-        </div>
+
+  <div
+          id="intro-example"
+          class="p-4 text-center"
+  >
+      <div class="mask p-5" style="background-color: rgba(0, 0, 0, 0.8);
+border-radius: 10px">
+          <div class="d-flex justify-content-center align-items-center h-100">
+              <div class="text-white">
+                  <h1 class="mb-3">Welcome to The Shire</h1>
+                  <h5 class="mb-4">
+                      Register or login if you already have an account
+                  </h5>
+                  <a
+                          class="btn btn-outline-light btn-lg m-2"
+                          th:href="@{/users/register}"
+                          role="button"
+                  >Register</a
+                  >
+                  <a
+                          class="btn btn-outline-light btn-lg m-2"
+                          th:href="@{/users/login}"
+                          role="button"
+                  >Login</a
+                  >
+              </div>
+          </div>
       </div>
+  </div>
 
 
 <style th:replace="fragments/style::style"></style>
