--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -36,11 +36,10 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdown">
                             <li sec:authorize="hasAnyAuthority('ADMIN')"><a class="dropdown-item" th:href="@{/restaurants/add}">ADD RESTAURANT</a></li>
-                            <li sec:authorize="isAuthenticated()"><a class="dropdown-item" href="#">Something else here</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li sec:authorize="isAuthenticated()"><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li sec:authorize="hasAnyAuthority('ADMIN')"><a class="dropdown-item" th:href="@{/users/all}">MANAGE USERS</a></li>
                         </ul>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
